--- a/알고리즘 풀이.ipynb
+++ b/알고리즘 풀이.ipynb
@@ -257,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c1f851ab",
+   "execution_count": 26,
+   "id": "2eaa8819",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "'fl'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,28 +277,47 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "class Solution:\n",
-    "    def longestCommonPrefix(self, strs: list[str]) -> str:\n",
-    "        result = \"\"\n",
-    "        \n",
-    "        for i in range(len(strs[0])):\n",
-    "            for s in strs:\n",
-    "                if i == len(s) or s[i] != strs[0][i]:\n",
-    "                    return result\n",
-    "            result += strs[0][i]\n",
-    "            \n",
-    "        return result\n",
-    "        \n",
-    "strs = ['flower','flow','flight']\n",
-    "df = pd.DataFrame([strs])\n",
-    "df\n",
-    "Solution().longestCommonPrefix(df.iloc[0])"
+    "def longestprefix(s: pd.Series) -> str:\n",
+    "    result = ''\n",
+    "    for chars in zip(*s):\n",
+    "        # Test that all characters are the same\n",
+    "        if all(chars[0] == c for c in chars[1:]):\n",
+    "            result += chars[0]\n",
+    "        else: break\n",
+    "    return result\n",
+    "\n",
+    "# Create a dataframe\n",
+    "df = pd.DataFrame(data=['flower','flow','flight'])\n",
+    "\n",
+    "# Apply the function to each *column*\n",
+    "df.apply(longestprefix,axis=0).iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "97c2b202",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('f', 'f', 'f'), ('l', 'l', 'l'), ('o', 'o', 'i'), ('w', 'w', 'g')]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(*df[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bdd79d3",
+   "id": "d50d60bc",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3694eeaf",
+   "id": "00590a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,8 +401,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f58d4813",
+   "execution_count": 48,
+   "id": "4bebcdd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 383. Ransom note\n",
+    "class Solution:\n",
+    "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:\n",
+    "        # make the values as list and sort it\n",
+    "        ran = sorted(list(ransomNote))\n",
+    "        mag = sorted(list(magazine))\n",
+    "        \n",
+    "        for char in mag:\n",
+    "            if ran and char == ran[0]:\n",
+    "                ran.pop(0)\n",
+    "        if ran:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "ransomNote = 'aa'\n",
+    "magazine = 'aab'        \n",
+    "Solution().canConstruct(ransomNote, magazine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14b989d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1',\n",
+       " '2',\n",
+       " 'Fizz',\n",
+       " '4',\n",
+       " 'Buzz',\n",
+       " 'Fizz',\n",
+       " '7',\n",
+       " '8',\n",
+       " 'Fizz',\n",
+       " 'Buzz',\n",
+       " '11',\n",
+       " 'Fizz',\n",
+       " '13',\n",
+       " '14',\n",
+       " 'FizzBuzz']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 412. Fizz Buzz\n",
+    "class Solution:\n",
+    "    def fizzBuzz(self, n: int) -> list[str]:\n",
+    "        res = []\n",
+    "        for x in range(1, n+1):\n",
+    "            temp = ''\n",
+    "            if x % 3 == 0:\n",
+    "                temp += 'Fizz'\n",
+    "            if x % 5 == 0:\n",
+    "                temp += 'Buzz'\n",
+    "            if x % 3 != 0 and x % 5 != 0:\n",
+    "                temp += str(x)\n",
+    "            res.append(temp)\n",
+    "        return res\n",
+    "    \n",
+    "s = Solution()\n",
+    "s.fizzBuzz(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2013c917",
    "metadata": {},
    "outputs": [],
    "source": []
