3 more easy level leetcode problem solution added
Fizz Buzz, middle of linked list, Richest customer wealth

--- a/알고리즘 풀이.ipynb
+++ b/알고리즘 풀이.ipynb
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2eaa8819",
+   "id": "0046d2e3",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "97c2b202",
+   "id": "79d86008",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d50d60bc",
+   "id": "ad778ecf",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "00590a3a",
+   "id": "1d8a1fb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4bebcdd5",
+   "id": "bb79ae68",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14b989d2",
+   "id": "0cf95809",
    "metadata": {},
    "outputs": [
     {
@@ -490,8 +490,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "1642f2fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.ListNode at 0x7fa068394550>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 876. Middle of a linked list\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution(ListNode):\n",
+    "    def middleNode(self, head: ListNode) -> ListNode:\n",
+    "        fast = head\n",
+    "        slow = head\n",
+    "        # Travel until the fast pointer reaches\n",
+    "        # the last node or None\n",
+    "        while fast != None and fast.next != None:\n",
+    "            # slow pointer moves 1 node\n",
+    "            slow = slow.next\n",
+    "            # fast pointer moves 2 nodes\n",
+    "            fast = fast.next.next\n",
+    "        return slow\n",
+    "# A linked List class with a single head node\n",
+    "# class LinkedList:\n",
+    "#     def __init__(self):\n",
+    "#         self.head = None\n",
+    "\n",
+    "# h = [1,2,3,4,5]\n",
+    "# LL = LinkedList()\n",
+    "# LL.head = ListNode(h)\n",
+    "# s = Solution()\n",
+    "# s.middleNode(LL.head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "49bdd135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Richest customer wealth\n",
+    "class Solution:\n",
+    "    def maximumWealth(self, accounts: list[list[int]]) -> int:\n",
+    "        res = []\n",
+    "        for wealth in accounts:\n",
+    "            res.append(sum(wealth))\n",
+    "        return max(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "03d19ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# another solution\n",
+    "class Solution:\n",
+    "    def maximumWealth(self, accounts: list[list[int]]) -> int:\n",
+    "        maxWealth = 0\n",
+    "        for i in range(len(accounts)):\n",
+    "            totalWealth = sum(accounts[i])\n",
+    "            maxWealth = max(maxWealth,totalWealth)\n",
+    "        return maxWealth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "35b9969a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# another 2\n",
+    "class Solution:\n",
+    "    def maximumWealth(self, accounts: list[list[int]]) -> int:\n",
+    "        # 리스트 내포 사용\n",
+    "        accounts = [sum(wealth) for wealth in accounts]\n",
+    "        return max(accounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2013c917",
+   "id": "144c478f",
    "metadata": {},
    "outputs": [],
    "source": []
