minimum falling path sum

--- a/알고리즘 풀이.ipynb
+++ b/알고리즘 풀이.ipynb
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0046d2e3",
+   "id": "49b08658",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "79d86008",
+   "id": "9eac6fcf",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ad778ecf",
+   "id": "ce961b7f",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d8a1fb5",
+   "id": "8ae6c335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bb79ae68",
+   "id": "0bd70b36",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cf95809",
+   "id": "bbc5778d",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1642f2fc",
+   "id": "c9301d3a",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "49bdd135",
+   "id": "ea9ce8bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "03d19ca5",
+   "id": "084b8d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "35b9969a",
+   "id": "7ff7c3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,8 +586,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "1cf721a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# minimum falling path sum\n",
+    "class Solution:\n",
+    "    def minFallingPathSum(self, matrix: list[list[int]]) -> int:\n",
+    "        # row는 행, col은 칼럼\n",
+    "        row = len(matrix)\n",
+    "        col = len(matrix[0])\n",
+    "        if col == 1:\n",
+    "            res = 0\n",
+    "            for i in range(row):\n",
+    "                res += matrix[i][0]\n",
+    "            return res\n",
+    "        for i in range(1,row):\n",
+    "            for j in range(col):\n",
+    "                if j == col-1:\n",
+    "                    matrix[i][j] = min(matrix[i-1][j], matrix[i-1][j-1]) + matrix[i][j]\n",
+    "                elif j != 0:\n",
+    "                    matrix[i][j] = min(matrix[i-1][j-1], matrix[i-1][j], matrix[i-1][j+1]) + matrix[i][j]\n",
+    "                else:\n",
+    "                    matrix[i][j] = min(matrix[i-1][j], matrix[i-1][j+1]) + matrix[i][j]\n",
+    "        return min(matrix[row-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "144c478f",
+   "id": "c500f3b1",
    "metadata": {},
    "outputs": [],
    "source": []
