--- a/알고리즘 풀이.ipynb
+++ b/알고리즘 풀이.ipynb
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "49b08658",
+   "id": "26e6b8c3",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9eac6fcf",
+   "id": "1848431b",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ce961b7f",
+   "id": "423a0ebc",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ae6c335",
+   "id": "3f9077ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0bd70b36",
+   "id": "216e25d6",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bbc5778d",
+   "id": "0fab80c7",
    "metadata": {},
    "outputs": [
     {
@@ -489,9 +489,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eef89e74",
+   "metadata": {},
+   "source": [
+    "## 876. Middle of a linked list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c9301d3a",
+   "id": "abe889ed",
    "metadata": {},
    "outputs": [
     {
@@ -537,9 +545,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba7946b1",
+   "metadata": {},
+   "source": [
+    "## RIchest customer wealth"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ea9ce8bb",
+   "id": "db6b6d3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "084b8d7a",
+   "id": "7b6de06e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7ff7c3d5",
+   "id": "c32997bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,38 +601,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20bc5973",
+   "metadata": {},
+   "source": [
+    "## 1. Two Sum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1cf721a4",
+   "execution_count": 2,
+   "id": "ddbcc3e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# minimum falling path sum\n",
+    "# 1. Two Sum\n",
+    "\n",
     "class Solution:\n",
-    "    def minFallingPathSum(self, matrix: list[list[int]]) -> int:\n",
-    "        # row는 행, col은 칼럼\n",
-    "        row = len(matrix)\n",
-    "        col = len(matrix[0])\n",
-    "        if col == 1:\n",
-    "            res = 0\n",
-    "            for i in range(row):\n",
-    "                res += matrix[i][0]\n",
-    "            return res\n",
-    "        for i in range(1,row):\n",
-    "            for j in range(col):\n",
-    "                if j == col-1:\n",
-    "                    matrix[i][j] = min(matrix[i-1][j], matrix[i-1][j-1]) + matrix[i][j]\n",
-    "                elif j != 0:\n",
-    "                    matrix[i][j] = min(matrix[i-1][j-1], matrix[i-1][j], matrix[i-1][j+1]) + matrix[i][j]\n",
-    "                else:\n",
-    "                    matrix[i][j] = min(matrix[i-1][j], matrix[i-1][j+1]) + matrix[i][j]\n",
-    "        return min(matrix[row-1])"
+    "    def twoSum(self, nums: list[int], target: int) -> list[int]:\n",
+    "        for i in range(len(nums)):\n",
+    "            for j in range(i+1, len(nums)):\n",
+    "                sum = nums[i] + nums[j]\n",
+    "                if sum == target:\n",
+    "                    return [i,j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "15a743e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second solution\n",
+    "\n",
+    "nums = [2,7,11,16]\n",
+    "target = 9\n",
+    "\n",
+    "class Solution:\n",
+    "    def twoSum(self, nums: list[int], target: int) -> list[int]:\n",
+    "        complementMap = dict()\n",
+    "        \n",
+    "        for i in range(len(nums)):\n",
+    "            num = nums[i]\n",
+    "            complement = target - num\n",
+    "            \n",
+    "            if num in complementMap:\n",
+    "                return [complementMap[num], i]\n",
+    "            else:\n",
+    "                complementMap[complement] = i"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c500f3b1",
+   "id": "d0717288",
    "metadata": {},
    "outputs": [],
    "source": []
