--- a/python_binary_search_assignment.ipynb
+++ b/python_binary_search_assignment.ipynb
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "together-original",
-        "outputId": "a53ec201-4fbb-4960-93d0-069e6a74c826"
+        "outputId": "78233e6b-9b3a-46af-f072-b215d0f1574e"
       },
       "outputs": [
         {
@@ -300,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "moral-glenn",
-        "outputId": "23baf729-c827-4df8-b43b-41bbe5e65602"
+        "outputId": "af376d2e-cb6b-4f64-9e6d-b32d7dd077bf"
       },
       "outputs": [
         {
@@ -343,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "charitable-daniel",
-        "outputId": "0ee2de8c-3467-49f0-960c-59def2587a66"
+        "outputId": "dd280403-dad3-4564-bf53-d000b0f9c23c"
       },
       "outputs": [
         {
@@ -362,7 +362,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -373,7 +373,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(None, False, 0.003)"
+              "(None, False, 0.004)"
             ]
           },
           "metadata": {},
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 15,
       "id": "shared-cream",
       "metadata": {
         "id": "shared-cream"
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 16,
       "id": "advanced-career",
       "metadata": {
         "id": "advanced-career"
@@ -568,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 17,
       "id": "romantic-zambia",
       "metadata": {
         "id": "romantic-zambia"
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 18,
       "id": "infrared-worship",
       "metadata": {
         "id": "infrared-worship"
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 19,
       "id": "stable-strategy",
       "metadata": {
         "id": "stable-strategy"
@@ -634,10 +634,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZTKrceSzBRng",
-        "outputId": "f356425b-53c5-438c-d944-40185bedc08f"
+        "outputId": "4adad5cc-6728-488b-e822-02601a254404"
       },
       "id": "ZTKrceSzBRng",
-      "execution_count": 37,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +656,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 20
         }
       ]
     },
@@ -691,7 +691,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "major-height",
-        "outputId": "3b4479f4-bb13-46d0-a907-479deccc0e39"
+        "outputId": "664b41c2-e18e-4898-eec0-38cb502bb607"
       },
       "outputs": [
         {
@@ -731,7 +731,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -750,7 +750,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -769,7 +769,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -788,7 +788,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -807,7 +807,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.002 ms\n",
+            "0.005 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -819,14 +819,14 @@
             "{'nums': []}\n",
             "\n",
             "Expected Output:\n",
-            "1\n",
+            "-1\n",
             "\n",
             "\n",
             "Actual Output:\n",
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.002 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -838,7 +838,7 @@
             "{'nums': [19]}\n",
             "\n",
             "Expected Output:\n",
-            "2\n",
+            "0\n",
             "\n",
             "\n",
             "Actual Output:\n",
@@ -876,14 +876,14 @@
             "{'nums': [19, 19, 19, 19, 19, 19, 19, 19]}\n",
             "\n",
             "Expected Output:\n",
-            "3\n",
+            "0\n",
             "\n",
             "\n",
             "Actual Output:\n",
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.002 ms\n",
+            "0.003 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -899,15 +899,15 @@
           "data": {
             "text/plain": [
               "[(None, False, 0.004),\n",
-              " (None, False, 0.003),\n",
-              " (None, False, 0.003),\n",
-              " (None, False, 0.003),\n",
-              " (None, False, 0.003),\n",
+              " (None, False, 0.004),\n",
+              " (None, False, 0.004),\n",
+              " (None, False, 0.004),\n",
+              " (None, False, 0.004),\n",
+              " (None, False, 0.005),\n",
+              " (None, False, 0.004),\n",
               " (None, False, 0.002),\n",
               " (None, False, 0.002),\n",
-              " (None, False, 0.002),\n",
-              " (None, False, 0.002),\n",
-              " (None, False, 0.002)]"
+              " (None, False, 0.003)]"
             ]
           },
           "metadata": {},
@@ -1000,15 +1000,23 @@
         "    \n",
         "    while True:                     # When should the loop be terminated?\n",
         "        \n",
+        "        # if there is no element, return -1\n",
+        "        if len(nums) == 0:\n",
+        "          return -1\n",
+        "\n",
+        "        # if the first element is minimum, reuturn 0\n",
+        "        if position == 0 and nums[position] <= min(nums[position:]):\n",
+        "          return position\n",
+        "\n",
         "        # Success criteria: check whether the number at the current position is smaller than the one before it\n",
         "        if position > 0 and nums[position] < nums[position - 1]:             # How to perform the check?\n",
         "          return position\n",
         "        \n",
         "        # Move to the next position\n",
         "        position += 1\n",
-        "    \n",
+        "\n",
         "        if position == len(nums):\n",
-        "          return -1             # What if none of the positions passed the check               "
+        "          return -1             # What if none of the positions passed the check"
       ]
     },
     {
@@ -1030,7 +1038,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "acceptable-airline",
-        "outputId": "249c3063-4b92-41dd-d52e-f519b5e192f2"
+        "outputId": "3622733d-8b6d-43aa-c5fe-1dfc5b3bd0c7"
       },
       "outputs": [
         {
@@ -1049,7 +1057,7 @@
             "3\n",
             "\n",
             "Execution Time:\n",
-            "0.005 ms\n",
+            "0.012 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1075,15 +1083,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 26,
       "id": "cooperative-third",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "cooperative-third",
-        "outputId": "a2ac1d82-7dab-4a93-da5f-c02e82b29079"
+        "outputId": "d56d5d3d-62ea-4aa8-b8eb-bac508b37253"
       },
       "outputs": [
         {
@@ -1104,7 +1111,7 @@
             "3\n",
             "\n",
             "Execution Time:\n",
-            "0.006 ms\n",
+            "0.011 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1123,7 +1130,7 @@
             "5\n",
             "\n",
             "Execution Time:\n",
-            "0.007 ms\n",
+            "0.009 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1139,13 +1146,13 @@
             "\n",
             "\n",
             "Actual Output:\n",
-            "-1\n",
+            "0\n",
             "\n",
             "Execution Time:\n",
-            "0.017 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
-            "\u001b[91mFAILED\u001b[0m\n",
+            "\u001b[92mPASSED\u001b[0m\n",
             "\n",
             "\n",
             "\u001b[1mTEST CASE #3\u001b[0m\n",
@@ -1161,7 +1168,7 @@
             "1\n",
             "\n",
             "Execution Time:\n",
-            "0.005 ms\n",
+            "0.007 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1180,7 +1187,7 @@
             "1\n",
             "\n",
             "Execution Time:\n",
-            "0.005 ms\n",
+            "0.006 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1199,27 +1206,91 @@
             "4\n",
             "\n",
             "Execution Time:\n",
-            "0.005 ms\n",
+            "0.007 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
             "\n",
             "\n",
-            "\u001b[1mTEST CASE #6\u001b[0m\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-38-c04cd5baf5fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlinear_search_results\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate_test_cases\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount_rotations_linear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.9/dist-packages/jovian/pythondsa/__init__.py\u001b[0m in \u001b[0;36mevaluate_test_cases\u001b[0;34m(function, test_cases, error_only, summary_only)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0merror_only\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\\033[1mTEST CASE #{}\\033[0m\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate_test_case\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0merror_only\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.9/dist-packages/jovian/pythondsa/__init__.py\u001b[0m in \u001b[0;36mevaluate_test_case\u001b[0;34m(function, test_case, display)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mactual_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-24-78b631094dbc>\u001b[0m in \u001b[0;36mcount_rotations_linear\u001b[0;34m(nums)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;31m# Success criteria: check whether the number at the current position is smaller than the one before it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mposition\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mposition\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m             \u001b[0;31m# How to perform the check?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m           \u001b[0;32mreturn\u001b[0m \u001b[0mposition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+            "\u001b[1mTEST CASE #6\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': []}\n",
+            "\n",
+            "Expected Output:\n",
+            "-1\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "-1\n",
+            "\n",
+            "Execution Time:\n",
+            "0.002 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #7\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19]}\n",
+            "\n",
+            "Expected Output:\n",
+            "0\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "0\n",
+            "\n",
+            "Execution Time:\n",
+            "0.003 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #8\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 25, 29, -3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "3\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "3\n",
+            "\n",
+            "Execution Time:\n",
+            "0.006 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #9\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 19, 19, 19, 19, 19, 19, 19]}\n",
+            "\n",
+            "Expected Output:\n",
+            "0\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "0\n",
+            "\n",
+            "Execution Time:\n",
+            "0.004 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mSUMMARY\u001b[0m\n",
+            "\n",
+            "TOTAL: 10, \u001b[92mPASSED\u001b[0m: 10, \u001b[91mFAILED\u001b[0m: 0\n"
           ]
         }
       ],
@@ -1257,14 +1328,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "attended-indonesia",
       "metadata": {
         "id": "attended-indonesia"
       },
       "outputs": [],
       "source": [
-        "linear_search_complexity = \"???\""
+        "linear_search_complexity = \"0.012\""
       ]
     },
     {
@@ -1302,10 +1373,11 @@
         "\n",
         "_**Q (Optional): Describe the binary search solution explained above problem in your own words.**_\n",
         "\n",
-        "1. **???**\n",
-        "2. **???**\n",
-        "3. **???**\n",
-        "4. **???**\n",
+        "1. **if the middle element is smaller than the previous one, return the middle element's position**\n",
+        "2. **if the middle element is smaller than the last element of the range or equeal to the last element, the answer lies to left**\n",
+        "3. **else, the answer lies to right**\n",
+        "4. **if there is no middle elemnt, return -1**\n",
+        "5. **if all elements are same, return 0**\n",
         "\n",
         "(add more steps if required)\n",
         "\n",
@@ -1348,21 +1420,21 @@
       "outputs": [],
       "source": [
         "def count_rotations_binary(nums):\n",
-        "    lo = ???\n",
-        "    hi = ???\n",
+        "    lo = 0\n",
+        "    hi = 0\n",
         "    \n",
-        "    while ???:\n",
-        "        mid = ???\n",
+        "    while lo <=hi:\n",
+        "        mid = int((lo + hi)/2)\n",
         "        mid_number = nums[mid]\n",
         "        \n",
         "        # Uncomment the next line for logging the values and fixing errors.\n",
-        "        # print(\"lo:\", lo, \", hi:\", hi, \", mid:\", mid, \", mid_number:\", mid_number)\n",
+        "        print(\"lo:\", lo, \", hi:\", hi, \", mid:\", mid, \", mid_number:\", mid_number)\n",
         "        \n",
-        "        if mid > 0 and ???:\n",
+        "        if mid > 0 and mid_number < nums[mid-1]:\n",
         "            # The middle position is the answer\n",
         "            return mid\n",
         "        \n",
-        "        elif ???:\n",
+        "        elif mid < :\n",
         "            # Answer lies in the left half\n",
         "            hi = mid - 1  \n",
         "        \n",
