problem solved; binary researched algorithm is used

--- a/python_binary_search_assignment.ipynb
+++ b/python_binary_search_assignment.ipynb
@@ -79,14 +79,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "together-original",
-        "outputId": "78233e6b-9b3a-46af-f072-b215d0f1574e"
+        "outputId": "ddb68655-c8ff-4e00-d7d5-67f1138b9479"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/68.6 KB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.6/68.6 KB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/68.6 KB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━\u001b[0m \u001b[32m61.4/68.6 KB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━\u001b[0m \u001b[32m61.4/68.6 KB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━\u001b[0m \u001b[32m61.4/68.6 KB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.6/68.6 KB\u001b[0m \u001b[31m497.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for uuid (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
@@ -300,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "moral-glenn",
-        "outputId": "af376d2e-cb6b-4f64-9e6d-b32d7dd077bf"
+        "outputId": "52a4f667-ddb6-4c0f-8082-a03e04a912b2"
       },
       "outputs": [
         {
@@ -343,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "charitable-daniel",
-        "outputId": "dd280403-dad3-4564-bf53-d000b0f9c23c"
+        "outputId": "060e16fd-daec-465d-f159-3967fa249aa8"
       },
       "outputs": [
         {
@@ -634,7 +634,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZTKrceSzBRng",
-        "outputId": "4adad5cc-6728-488b-e822-02601a254404"
+        "outputId": "a361dc59-9d6b-4962-bf5a-188ed2da6a63"
       },
       "id": "ZTKrceSzBRng",
       "execution_count": 20,
@@ -691,7 +691,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "major-height",
-        "outputId": "664b41c2-e18e-4898-eec0-38cb502bb607"
+        "outputId": "40580745-2b00-41be-ef4e-321466a24b7b"
       },
       "outputs": [
         {
@@ -712,7 +712,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.006 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -769,7 +769,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.003 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -788,7 +788,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.002 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -807,7 +807,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.005 ms\n",
+            "0.002 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -826,7 +826,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.002 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -883,7 +883,7 @@
             "None\n",
             "\n",
             "Execution Time:\n",
-            "0.003 ms\n",
+            "0.002 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[91mFAILED\u001b[0m\n",
@@ -898,16 +898,16 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(None, False, 0.004),\n",
+              "[(None, False, 0.006),\n",
               " (None, False, 0.004),\n",
               " (None, False, 0.004),\n",
-              " (None, False, 0.004),\n",
-              " (None, False, 0.004),\n",
-              " (None, False, 0.005),\n",
-              " (None, False, 0.004),\n",
+              " (None, False, 0.003),\n",
               " (None, False, 0.002),\n",
               " (None, False, 0.002),\n",
-              " (None, False, 0.003)]"
+              " (None, False, 0.002),\n",
+              " (None, False, 0.002),\n",
+              " (None, False, 0.002),\n",
+              " (None, False, 0.002)]"
             ]
           },
           "metadata": {},
@@ -1038,7 +1038,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "acceptable-airline",
-        "outputId": "3622733d-8b6d-43aa-c5fe-1dfc5b3bd0c7"
+        "outputId": "64eac760-f29c-4465-cd4d-1f906ec0b3ed"
       },
       "outputs": [
         {
@@ -1090,7 +1090,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cooperative-third",
-        "outputId": "d56d5d3d-62ea-4aa8-b8eb-bac508b37253"
+        "outputId": "f8a09e9b-079b-480f-dbea-a85d6aa39bfe"
       },
       "outputs": [
         {
@@ -1130,7 +1130,7 @@
             "5\n",
             "\n",
             "Execution Time:\n",
-            "0.009 ms\n",
+            "0.008 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1149,7 +1149,7 @@
             "0\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.005 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1168,7 +1168,7 @@
             "1\n",
             "\n",
             "Execution Time:\n",
-            "0.007 ms\n",
+            "0.005 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1187,7 +1187,7 @@
             "1\n",
             "\n",
             "Execution Time:\n",
-            "0.006 ms\n",
+            "0.004 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1206,7 +1206,7 @@
             "4\n",
             "\n",
             "Execution Time:\n",
-            "0.007 ms\n",
+            "0.006 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1263,7 +1263,7 @@
             "3\n",
             "\n",
             "Execution Time:\n",
-            "0.006 ms\n",
+            "0.005 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1282,7 +1282,7 @@
             "0\n",
             "\n",
             "Execution Time:\n",
-            "0.004 ms\n",
+            "0.003 ms\n",
             "\n",
             "Test Result:\n",
             "\u001b[92mPASSED\u001b[0m\n",
@@ -1385,18 +1385,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "chronic-notebook",
-      "metadata": {
-        "id": "chronic-notebook"
-      },
-      "outputs": [],
-      "source": [
-        "jovian.commit(project=project)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "recorded-directive",
       "metadata": {
@@ -1412,7 +1400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "complete-thing",
       "metadata": {
         "id": "complete-thing"
@@ -1421,28 +1409,36 @@
       "source": [
         "def count_rotations_binary(nums):\n",
         "    lo = 0\n",
-        "    hi = 0\n",
-        "    \n",
+        "    hi = len(nums) - 1\n",
+        "\n",
         "    while lo <=hi:\n",
         "        mid = int((lo + hi)/2)\n",
         "        mid_number = nums[mid]\n",
         "        \n",
         "        # Uncomment the next line for logging the values and fixing errors.\n",
-        "        print(\"lo:\", lo, \", hi:\", hi, \", mid:\", mid, \", mid_number:\", mid_number)\n",
+        "        # print(\"lo:\", lo, \", hi:\", hi, \", mid:\", mid, \", mid_number:\", mid_number, \"last_element:\", nums[hi])\n",
         "        \n",
         "        if mid > 0 and mid_number < nums[mid-1]:\n",
         "            # The middle position is the answer\n",
         "            return mid\n",
-        "        \n",
-        "        elif mid < :\n",
+        "\n",
+        "        elif mid_number <= nums[hi]:\n",
         "            # Answer lies in the left half\n",
-        "            hi = mid - 1  \n",
+        "            hi = mid - 1\n",
         "        \n",
-        "        else:\n",
+        "        elif mid_number > nums[hi]:\n",
         "            # Answer lies in the right half\n",
         "            lo = mid + 1\n",
+        "\n",
+        "        else:\n",
+        "            # handle the duplicated cases\n",
+        "            while hi > mid and nums[hi] == nums[mid]:\n",
+        "              hi -= 1\n",
         "    \n",
-        "    return ???"
+        "    if len(nums) == 0:\n",
+        "        return -1\n",
+        "\n",
+        "    return 0"
       ]
     },
     {
@@ -1457,12 +1453,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "assigned-worth",
       "metadata": {
-        "id": "assigned-worth"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "assigned-worth",
+        "outputId": "b01ad206-4842-4e68-c40e-2cc954509215"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 25, 29, 3, 5, 6, 7, 9, 11, 14]}\n",
+            "\n",
+            "Expected Output:\n",
+            "3\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "3\n",
+            "\n",
+            "Execution Time:\n",
+            "0.01 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "binary_search_result = evaluate_test_case(count_rotations_binary, test)"
       ]
@@ -1481,12 +1505,217 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "id": "operational-symposium",
       "metadata": {
-        "id": "operational-symposium"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "operational-symposium",
+        "outputId": "18a200a2-774a-4106-cf16-e04ee95b7f02"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\u001b[1mTEST CASE #0\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 25, 29, 3, 5, 6, 7, 9, 11, 14]}\n",
+            "\n",
+            "Expected Output:\n",
+            "3\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "3\n",
+            "\n",
+            "Execution Time:\n",
+            "0.011 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #1\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 25, 29, 30, 32, 3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "5\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "5\n",
+            "\n",
+            "Execution Time:\n",
+            "0.009 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #2\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "0\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "0\n",
+            "\n",
+            "Execution Time:\n",
+            "0.007 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #3\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [29, 3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "1\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "1\n",
+            "\n",
+            "Execution Time:\n",
+            "0.008 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #4\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [29, 3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "1\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "1\n",
+            "\n",
+            "Execution Time:\n",
+            "0.006 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #5\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [10, 19, 25, 29, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "4\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "4\n",
+            "\n",
+            "Execution Time:\n",
+            "0.006 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #6\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': []}\n",
+            "\n",
+            "Expected Output:\n",
+            "-1\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "-1\n",
+            "\n",
+            "Execution Time:\n",
+            "0.002 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #7\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19]}\n",
+            "\n",
+            "Expected Output:\n",
+            "0\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "0\n",
+            "\n",
+            "Execution Time:\n",
+            "0.003 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #8\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 25, 29, -3, 5, 6, 7, 9]}\n",
+            "\n",
+            "Expected Output:\n",
+            "3\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "3\n",
+            "\n",
+            "Execution Time:\n",
+            "0.003 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mTEST CASE #9\u001b[0m\n",
+            "\n",
+            "Input:\n",
+            "{'nums': [19, 19, 19, 19, 19, 19, 19, 19]}\n",
+            "\n",
+            "Expected Output:\n",
+            "0\n",
+            "\n",
+            "\n",
+            "Actual Output:\n",
+            "0\n",
+            "\n",
+            "Execution Time:\n",
+            "0.009 ms\n",
+            "\n",
+            "Test Result:\n",
+            "\u001b[92mPASSED\u001b[0m\n",
+            "\n",
+            "\n",
+            "\u001b[1mSUMMARY\u001b[0m\n",
+            "\n",
+            "TOTAL: 10, \u001b[92mPASSED\u001b[0m: 10, \u001b[91mFAILED\u001b[0m: 0\n"
+          ]
+        }
+      ],
       "source": [
         "binary_search_results = evaluate_test_cases(count_rotations_binary, tests)"
       ]
@@ -1508,18 +1737,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "amateur-stomach",
-      "metadata": {
-        "id": "amateur-stomach"
-      },
-      "outputs": [],
-      "source": [
-        "jovian.commit(project=project)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "honey-cosmetic",
       "metadata": {
@@ -1535,14 +1752,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "negative-metallic",
       "metadata": {
         "id": "negative-metallic"
       },
       "outputs": [],
       "source": [
-        "binary_search_complexity = \"???\""
+        "binary_search_complexity = \"0.011\""
       ]
     },
     {
@@ -1559,7 +1776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "smooth-delicious",
       "metadata": {
         "id": "smooth-delicious"
@@ -1567,18 +1784,6 @@
       "outputs": [],
       "source": [
         "import jovian"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "graphic-separation",
-      "metadata": {
-        "id": "graphic-separation"
-      },
-      "outputs": [],
-      "source": [
-        "jovian.commit()"
       ]
     },
     {
@@ -1597,12 +1802,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "sticky-motel",
       "metadata": {
-        "id": "sticky-motel"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sticky-motel",
+        "outputId": "2185f079-7351-43cb-f3ad-d3d2d5007bc5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[jovian] Detected Colab notebook...\u001b[0m\n",
+            "[jovian] jovian.commit() is no longer required on Google Colab. If you ran this notebook from Jovian, \n",
+            "then just save this file in Colab using Ctrl+S/Cmd+S and it will be updated on Jovian. \n",
+            "Also, you can also delete this cell, it's no longer necessary.\u001b[0m\n"
+          ]
+        }
+      ],
       "source": [
         "jovian.submit(assignment=\"pythondsa-assignment1\")"
       ]
@@ -1638,7 +1858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "id": "severe-personal",
       "metadata": {
         "id": "severe-personal"
